<resources>
    <string name="app_name">DoorsOpenOttawa</string>
    <string name="action_about">About</string>
    <string name="author" translatable="false">Yanming Meng (meng0028)</string>
    <string name="google_maps_key">AIzaSyBwhzuVHtkcQxWwPZD_l5B7N5v3wvD_ybk</string>
    <string name="post_data">New Building...</string>
    <string name="show_all_buildings">Show All Buildings</string>
    <string name="choose_a_category">Choose a Category</string>
    <string name="my_building">My Buildings</string>
    <string name="sort_atoz">Ascending Order (a-z)</string>
    <string name="sort_ztoa">Descending Order (z-a)</string>

    <string-array name="categories">
        <item>Religious</item>
        <item>Embassies</item>
        <item>Government</item>
        <item>Functional</item>
        <item>Galleries and Theatres</item>
        <item>Academic Institutions</item>
        <item>Sports and Leisure</item>
        <item>Community and/or Care Centres</item>
        <item>Business and/or Foundations</item>
        <item>Museums, Archives and Historic Sites</item>
        <item>Other</item>
    </string-array>
</resources>
